--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/modifiers": "^7.0.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.3.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.10",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
