--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.5.4",
     "todo-front": "file:"
   },
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "postcss": "^8",
